# ContentBot

./: .env.sample  .gitignore  Dockerfile  README.md  __main__.py  config.py  cookies  parser.py  pyproject.toml  run.sh  texts.py  userbot.session
src/: __main__.py  background_tasks.py  config.py  d7.py  docker-compose.yml  image.py  keyboards.py  loader.py  parser.py  states.py  texts.py  userbot.py
src/chromedriver/: class_parser.py
src/core/: ad_manager.py
src/core/db/: __init__.py  channels.py  sales.py  users.py
src/d7/: __init__.py  app.py  media_group_collector.py  poster.py  utils.py
src/d7/database/: database.py
src/d7/handlers/: schedule_post.py
src/d7/temp/: channel_post.py
src/d7/userbot/: __init__.py  client.py  pyrogram_patch.py  userbot.py
src/handlers/: __init__.py  auth.py  parse.py  start.py  text.py  text_handler.py
src/handlers/ad_posts_handler/: __init__.py  handler.py
src/handlers/ad_schedule/: __init__.py  check_channels.py  choose_date.py  get_ad_post.py  get_channels.py  get_inline_keyboard.py  post_setting_callback_handlers.py  query_handlers.py  schedule_ad.py  set_autodelete_timer.py  start_command.py
src/handlers/add_admin/: add_admin.py  get_admin.py  start_command.py
src/handlers/add_sale/: __init__.py  check_channels.py  choose_ad_time.py  choose_date.py  get_channels.py  start_command.py  update_sale.py
src/handlers/channel_posts_handler/: __init__.py  st1_channel_posts_handler.py
src/lib/: __init__.py  pictures.py  scraper.py
src/utils/: check_admin_rights.py  db.py  debug.py  links.py  time.py
(+38 files in other folders)
