[tool.poetry]
name = "trainingbot"
version = "0.1.0"
description = ""
authors = []
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
aiogram = "^2.23.1"
beautifulsoup4 = "^4.11.1"
envparse = "^0.2.0"
pymongo = "^4.3.3"
pyrogram = "^2.0.69"
tgcrypto = "^1.2.5"
httpx = "^0.23.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
